--- a/trunk/SourceCode/FixedAsset/FixedAsset.csproj
+++ b/trunk/SourceCode/FixedAsset/FixedAsset.csproj
@@ -535,6 +535,12 @@
     <Compile Include="Admin\UserControl\ucDatePicker.ascx.designer.cs">
       <DependentUpon>ucDatePicker.ascx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\UserControl\ucMaintaintype.ascx.cs">
+      <DependentUpon>ucMaintaintype.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\UserControl\ucMaintaintype.ascx.designer.cs">
+      <DependentUpon>ucMaintaintype.ascx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\UserControl\ucMultiSelectProcurePlans.ascx.cs">
       <DependentUpon>ucMultiSelectProcurePlans.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -728,6 +734,7 @@
     <Content Include="Admin\SelectedMultiAssets.aspx" />
     <Content Include="Admin\SelectSingleProject.aspx" />
     <Content Include="Admin\ShowAssetDetail.aspx" />
+    <Content Include="Admin\UserControl\ucMaintaintype.ascx" />
     <Content Include="Admin\UserControl\ucSelectedMultiAssets.ascx" />
     <Content Include="Admin\UserControl\ucSelectProject.ascx" />
     <Content Include="Admin\UserControl\ucSelectProjectForTree.ascx" />
