--- a/SourceCode/FixedAsset/Web.config
+++ b/SourceCode/FixedAsset/Web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <connectionStrings>
-    <add name="FixedAsset" connectionString="user id=asset;password=asset;Data Source=asset" />
+    <add name="FixedAsset" connectionString="user id=asset;password=asset;Data Source=orcl" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
