--- a/SourceCode/IService/IService.csproj
+++ b/SourceCode/IService/IService.csproj
@@ -102,6 +102,8 @@
     <Compile Include="IAssetsetupinfoService.cs" />
     <Compile Include="IAssetsupplierService.cs" />
     <Compile Include="IBaccountService.cs" />
+    <Compile Include="IHcontractdetailService.cs" />
+    <Compile Include="IHcontractService.cs" />
     <Compile Include="ILbfgsService.cs" />
     <Compile Include="ILbfgsxmtService.cs" />
     <Compile Include="IMenuitemService.cs" />
